# qsmile

./: LICENSE.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  ruff.toml.rej
.github/agents/: tests.md
.github/workflows/: rhiza_ci.yml  rhiza_devcontainer.yml.rej  rhiza_release.yml.rej
.rhiza/: template.yml
book/marimo/notebooks/: chain_demo.py  example.py  fitting_demo.py  qsmile_demo.py  sabr_demo.py
docs/: api.md  index.md  notebooks.md  reports.md
docs/notebooks/: fitting_demo.py  qsmile_demo.py
openspec/changes/abstract-smile-fitting/: design.md  proposal.md
openspec/changes/coordinate-transforms/: proposal.md  tasks.md
openspec/changes/option-chain-metadata/: tasks.md
openspec/changes/option-chain-pricing/: tasks.md
openspec/changes/sabr-model/: tasks.md
openspec/changes/smile-metadata-dates/: design.md  proposal.md  tasks.md
openspec/specs/abstract-smile-model/: spec.md
openspec/specs/black76/: spec.md
openspec/specs/daycount/: spec.md
openspec/specs/delta-blended-ivol/: spec.md
openspec/specs/generic-fitting/: spec.md
openspec/specs/hierarchical-strike-store/: spec.md
openspec/specs/metadata-factory-overload/: spec.md
openspec/specs/model-coordinate-transform/: spec.md
openspec/specs/option-chain/: spec.md
openspec/specs/option-chain-prices/: spec.md
openspec/specs/option-chain-vols/: spec.md
openspec/specs/plotting/: spec.md
openspec/specs/sabr-model/: spec.md
openspec/specs/smile-data/: spec.md
openspec/specs/smile-data-factories/: spec.md
openspec/specs/smile-data-validation/: spec.md
openspec/specs/smile-fitting/: spec.md
parquet/chains/: SPX_20260402_20260630.parquet  SPX_20260403_20260630.parquet
src/qsmile/: __init__.py  black76.py  chain.py  coords.py  core.py  fitting.py  maps.py  metadata.py  plot.py  prices.py  smile_data.py  svi.py  unitised.py  vols.py
tests/: conftest.py  test_black76.py  test_chain.py  test_coords.py  test_core.py  test_fitting.py  test_maps.py  test_metadata.py  test_plot.py  test_prices.py  test_smile_data.py  test_svi.py  test_to_smile_data.py  test_unitised.py  test_vols.py
tests/core/: test_black76.py  test_daycount.py  test_maps.py  test_plot.py
tests/data/: test_metadata.py  test_parquet.py  test_prices.py  test_strikes.py  test_vols.py
tests/models/: test_abstract_smile_model.py  test_fitting.py  test_sabr.py  test_sabr_fitting.py  test_smile_model.py  test_svi.py
(+123 files in other folders)
