[project]
name = "qsmile"
version = "0.0.1-rc.3"
description = "Volatility Smile Modelling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mark Richardson" }
]
keywords = ["templates", "configuration", "ci", "ruff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "numpy>=2.4.0,<3.0",     # Numerical arrays for market data and SVI evaluation
    "scipy>=1.14.0,<2.0",    # Optimisation (least_squares) for SVI fitting
    "cvxpy>=1.6.0,<2.0",     # Convex optimisation for forward/DF calibration
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9.0,<4.0",  # Plotting with bid/ask error bars
]

[dependency-groups]
dev = [
    "marimo>=0.18.0,<1.0", # Reactive notebook runtime for book/ examples (v0.18+ for streaming, <1.0 for API stability)
    "numpy>=2.4.0,<3.0", # Numerical computing for notebook data analysis (v2.4+ includes 2.0 improvements, <3.0 avoids breaking changes)
    "plotly>=6.5.0,<7.0", # Interactive visualization in notebooks (v6.5+ mature features, <7.0 for API stability)
    "pandas>=3,<3.1", # Data manipulation for notebook examples (v3+ for modern APIs, <3.1 conservative after major release)
    "pyyaml>=6.0,<7.0", # YAML parsing for validation scripts (v6+ for security fixes, <7.0 for API stability)
    # See docs/DEPENDENCIES.md for detailed version rationale
    "pyarrow>=23.0.1",
]

[project.urls]
Homepage = "https://github.com/markrichardson/qsmile"
Repository = "https://github.com/markrichardson/qsmile"
Issues = "https://github.com/markrichardson/qsmile/issues"

[tool.deptry.package_module_name_map]
marimo = "marimo"
numpy = "numpy"
scipy = "scipy"
cvxpy = "cvxpy"
plotly = "plotly"
pandas = "pandas"
pyyaml = "yaml"
matplotlib = "matplotlib"

[tool.ty.environment]
python-version = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qsmile"]

